# language-games

./: .gitignore  CMakeLists.txt  README.md  vocab.txt
include/: Animator.hpp  board_operations.hpp  file_operations.hpp  game_loop.hpp  game_operations.hpp  graphics_operations.hpp  string_operations.hpp
resources/: Stor-license.txt  vocab.txt
source/: CMakeLists.txt  main.cpp
